# soundevents

.github/workflows/: ci.yml  loc.yml
soundevents-dataset/: Cargo.toml
xtask/: Cargo.toml
