[package]
name = "soundevents-dataset"
version = "0.2.0"
# Intentionally kept on edition 2021 / MSRV 1.59 so this no_std static-data
# crate remains usable from older toolchains.
edition = "2021"
documentation = "https://docs.rs/soundevents-dataset"
description = "Audio Set Ontology aims to provide a comprehensive set of categories to describe sound events."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["audioset", "sound-events", "ontology", "dataset", "no-std"]
categories = ["data-structures", "multimedia::audio", "no-std", "no-std::no-alloc"]
rust-version = "1.59.0"

[features]
default = ["std", "rated"]
alloc = []
std = ["thiserror/default", "phf/std"]

# Include the full AudioSet ontology (632 entries) — exposes the
# `ontology` module with `SoundEvent`, `DATASET`, etc.
ontology = []

# Include the released AudioSet rated label set (527 entries from
# `class_labels_indices.csv`) — exposes the `rated` module with
# `RatedSoundEvent`, `RATED_DATASET`, etc.
rated = []

serde = ["dep:serde"]

[dependencies]
thiserror = { workspace = true, default-features = false }
phf = { version = "0.14", default-features = false, features = ["uncased"] }
uncased = { version = "0.9", default-features = false }

serde = { workspace = true, features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
