[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
indexmap = "2"
prettyplease = "0.2"
phf_codegen = "0.13"
phf_shared = { version = "0.14", features = ["uncased"] }
uncased = "0.9"
proc-macro2 = "1"
quote = "1"
syn = "2"
heck = "0.5"
siphasher = "1"
